kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: default
  labels:
    app: homepage
spec:
  selector:
    app: homepage
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
